--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <div class="col-12 text-center">
       <B>
         <CODE>
-        <p class="sobremi"> SOBRE MI </p>
+        <p class="sobremi"> SOBRE </p>
         </CODE>
       </B>
       <p class="descripcion"> Mi nombre es Florencia, soy de Neuquén y estudié la carrera Diseño gráfico. Me gradué en 2019 en la Universidad de Flores, Sede Cipolletti. Actualmente vivo en Córdoba Capital y busco seguir ampliando mis conocimientos en diferentes ramas del Diseño y como comunicadora visual. </p>
